samples/_failures_safe/1761317227_d293ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9120cbf.c: In function ‘print_stats’:
./samples/SAFE/__tmp_c9120cbf.c:127:9: error: expected identifier at end of input
  127 |         double error_percentage = (double)analyzer->
      |         ^~~~~~
./samples/SAFE/__tmp_c9120cbf.c:127:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9120cbf.c:127:9: error: expected declaration or statement at end of input
